<resources>
    <string name="app_name"></string>
    <string name="address_select">选择地址</string>
    <string name="current_address">当前选择地址&#160;:&#160;</string>
    <string name="select_province">请选择省份</string>
    <string name="select_city">请选择城市</string>
    <string name="select_country">请选择县/区</string>
    <string name="select_towns">请选择乡镇/办事处</string>
    <string name="select_village">请选择村</string>
    <string name="select_auto_addr">自动定位</string>
    <string name="select_province_hunan">湖南省</string>
    <string name="select_city_chenzhou">郴州市</string>
    <string name="select_contains_cun">村委会</string>
    <string name="select_contains_she">社区</string>
    <string name="select_contains_juweihui">居委会</string>
    <string name="select_city_name">市区</string>
    <string name="select_address_ok">确定</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载</string>
    <string name="nomore_loading">没有更多数据</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_done">刷新成功</string>
    <string name="listview_header_last_time">last update：</string>
    <string name="loading">加载中...</string>
</resources>
