<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class = "BreakFastAddr">
        <import type="android.view.View"/>
        <variable
            name="zixunall"
            type="com.yanshun.mfluitmarket.common.entity.ZiXunAll"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_background">
        <RelativeLayout
            android:id ="@+id/addr_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"
            android:background="@color/fm_break_fast_title_bg">
            <TextView
                android:id="@+id/addr_ok"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:text="@string/select_address_ok"
                android:textSize="18sp"
                android:textColor="@color/breakfast_background"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/addr_ok"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <ImageView
                    android:id ="@+id/addr_back"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_arrow"
                    android:scaleType="center"
                    android:paddingLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/addr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/addr_back"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/breakfast_background"
                    android:text="@string/address_select"/>
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:id = "@+id/addr_content_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/addr_title"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_address"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/addr_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/fm_break_fast_title_bg"
                android:textSize="16sp"
                android:text="@{zixunall.publicTime}"/>
        </LinearLayout>
        <RelativeLayout
            android:id = "@+id/select_addre_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/addr_content_rl">
            <LinearLayout
                android:id="@+id/addr_selecte"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/addr_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:enabled="false"
                    android:hint="@string/select_province_hunan"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/addr_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:enabled="false"
                    android:hint="@string/select_city_chenzhou"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/addr_county"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/select_country"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/addr_towns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/select_towns"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/addr_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/select_village"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/addr_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/select_auto_addr"
                    android:textSize="14sp" />
            </LinearLayout>
            <com.yanshun.mfluitmarket.base.widget.BaseListView
                android:id = "@+id/addr_selecte_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/addr_selecte"
                android:layout_alignTop="@+id/addr_selecte"
                android:layout_marginLeft="5dp"
                android:fadeScrollbars="false"
                android:scrollbars="none">
            </com.yanshun.mfluitmarket.base.widget.BaseListView>
        </RelativeLayout>
    </RelativeLayout>
</layout>